--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -3,7 +3,7 @@
 <head>
   <title>Jasmine Test Runner</title>
   <link rel="stylesheet" type="text/css" href="jasmine-1.0.2/jasmine.css">
-  <script src="jquery-1.6.1.js"></script>
+  <script src="jquery-1.8.1.min.js"></script>
   <script src="jasmine-1.0.2/jasmine.js"></script>
   <script src="jasmine-1.0.2/jasmine-html.js"></script>
   <script src="../smoax.js"></script>
