Rename test files.

--- a/spec/jasmine-test.html
+++ b/spec/jasmine-test.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jasmine Test Runner</title>
+  <title>smoax - jasmine tests</title>
   <link rel="stylesheet" type="text/css" href="jasmine-1.0.2/jasmine.css">
   <script src="jquery-1.8.1.min.js"></script>
   <script src="jasmine-1.0.2/jasmine.js"></script>
   <script src="jasmine-1.0.2/jasmine-html.js"></script>
   <script src="../smoax.js"></script>
-  <script src="smoax-spec.js"></script>
+  <script src="jasmine-test.js"></script>
 </head>
 <body>
 <script type="text/javascript">
