--- a/spec/jasmine-test.html
+++ b/spec/jasmine-test.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 <script type="text/javascript">
-  jasmine.getEnv().addReporter(new jasmine.TrivialReporter());
-  $(function() { jasmine.getEnv().execute(); });
+  jasmine.getEnv().addReporter(new jasmine.TrivialReporter())
+  $(function() { jasmine.getEnv().execute(); })
 </script>
 </body>
 </html>
